<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.tracktime.ui.StatisticsFragment">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_height="400dp"
        android:layout_width="match_parent" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:text="@string/_7d"
            android:id="@+id/radio_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:text="@string/_1m"
            android:id="@+id/radio_1m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:text="@string/_3m"
            android:id="@+id/radio_3m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:text="@string/_6m"
            android:id="@+id/radio_6m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:text="@string/y"
            android:id="@+id/radio_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:text="@string/all"
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/sprint"
        android:elevation="0dp"/>

</LinearLayout>