<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChangeSprintActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="15dp"
        android:text="00:00:00"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/llLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_str"
            android:textSize="30sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_str"
            android:textSize="30sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_str"
            android:textSize="30sp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/llLeft"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="31.01.2021"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:35:11"
            android:textSize="30sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tvFinishTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20:14:15"
            android:textSize="30sp"
            android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/spnTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveSprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        android:text="@string/save"/>



</androidx.constraintlayout.widget.ConstraintLayout>